# nhanes

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db
.viz/: stats.json
notebooks/: Correlaciones Limpias.ipynb  Informe de Pruebas.ipynb  Pruebas para real.ipynb  Untitled.ipynb  best_pipeline_Circunferencia_Cintura_0-20_regression.py  best_pipeline_Circunferencia_Cintura_0-30_regression.py  best_pipeline_Circunferencia_Cintura_21-30_regression.py  best_pipeline_Circunferencia_Cintura_31-60_regression.py  best_pipeline_Circunferencia_Cintura_60+_regression.py  best_pipeline_Circunferencia_Cintura_60-80_regression.py  best_pipeline_Colesterol_0-30_regression.py  best_pipeline_Colesterol_31-60_regression.py  best_pipeline_Colesterol_60+_regression.py  best_pipeline_Colesterol_Total_suero_0-30_genero1_regression.py  best_pipeline_Colesterol_Total_suero_0-30_genero2_regression.py  best_pipeline_Colesterol_Total_suero_0-30_regression.py  best_pipeline_Colesterol_Total_suero_31-60_genero1_regression.py  best_pipeline_Colesterol_Total_suero_31-60_genero2_regression.py  best_pipeline_Colesterol_Total_suero_31-60_regression.py  best_pipeline_Colesterol_Total_suero_60+_genero1_regression.py  best_pipeline_Colesterol_Total_suero_60+_genero2_regression.py  best_pipeline_Colesterol_Total_suero_60+_regression.py  best_pipeline_Colesterol_Total_suero_regression.py  best_pipeline_Colesterol_regression.py  best_pipeline_Creatinina_0-30_regression.py  best_pipeline_Creatinina_31-60_regression.py  best_pipeline_Creatinina_60+_regression.py  best_pipeline_Glucosa_suero_0-30_genero1_regression.py  best_pipeline_Glucosa_suero_0-30_genero2_regression.py  (+48 more)
tests/: test_run.py
(+24 files in other folders)
